[project]
name = "redplanet"
version = "0.1.0"
description = "User-friendly accessors/calculations/plotting for various Mars datasets and derived geophysics quantities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2024.9.0",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "pooch>=1.8.2",
    "pyshtools>=4.13.1",
    "scipy>=1.14.1",
    "xarray>=2024.9.0",
    "xxhash>=3.5.0",
    "zarr>=2.18.3",
]

[project.optional-dependencies]
crs = [
    "rioxarray>=0.17.0",
]
plot = [
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
